cmake_minimum_required(VERSION 3.15)
project(SingletEWPT VERSION 0.6.0 LANGUAGES CXX)


set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


# Set output directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

## Installation direction
set(INSTALL_DIR ${CMAKE_SOURCE_DIR}/bin)


# Set default built type
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
	set(CMAKE_BUILD_TYPE Release)
endif()


message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")


set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall")

# Compiler-specific settings
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    # Enable warnings
    add_compile_options(-Wall -Wextra)
    # Treat all warnings as errors?
    #add_compile_options(-Werror)
    # Enable more warnings (optional)
    #add_compile_options(-Wpedantic)
    
    ## Add flags for gprof profiling. Debug builds only
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    	## This flag is needed also during linking so add_compile_options doesn't do the trick apparently
    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
		# no optimization here since it can interfere with profiling
    endif()
    
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
    	# Optimization
    	add_compile_options(-O3)
    endif()
    
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    # Enable warnings and treat them as errors
    #add_compile_options(/W4 /WX)
endif()


## Main program target
set(MAIN_EXEC SingletEWPT)

# Main code
add_subdirectory(src)

# Unit tests
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	message(STATUS "==== NOTE: Configuring Debug build")
	message(STATUS "")
    add_subdirectory(tests)
endif()
